# cython-cmake

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  noxfile.py  pyproject.toml
.distro/: cython-cmake.rpmlintrc  cython-cmake.spec  python-cython-cmake.spec
.distro/plans/: cmake.fmf  main.fmf  smoke.fmf
.distro/tests/: smoke.fmf
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/cython_cmake/: __init__.py  __main__.py  vendor.py
src/cython_cmake/cmake/: CMakeCythonCompiler.cmake.in  CMakeCythonInformation.cmake  CMakeDetermineCythonCompiler.cmake  CMakeTestCythonCompiler.cmake  FindCython.cmake  UseCython.cmake
tests/: conftest.py  main.fmf  smoke.fmf  test_package.py  test_pure_cmake.sh  test_vendorize.py
