[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "cython-cmake"
authors = [
  { name = "Jean-Christophe Fillion-Robin", email = "jchris.fillionr@kitware.com" },
]
description = "CMake helpers for building Cython modules"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "cython",
  "importlib_resources; python_version<'3.9'"
]

[project.entry-points."cmake.module"]
cython_cmake = "cython_cmake.cmake"

[project.scripts]
cython-cmake = "cython_cmake.__main__:main"

[dependency-groups]
dev = [{include-group="test"}]
test = [
  "pytest >=6",
  "scikit-build-core",
]

[project.urls]
Homepage = "https://github.com/scikit-build/cython-cmake"
"Bug Tracker" = "https://github.com/scikit-build/cython-cmake/issues"
Discussions = "https://github.com/scikit-build/cython-cmake/discussions"
Changelog = "https://github.com/scikit-build/cython-cmake/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/cython_cmake/_version.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-test]
features = ["test"]
extra-dependencies = ["cmake", "ninja"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["cython_cmake"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "cython_cmake.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "PLR2004", # Magic value used in comparison
  "S101",    # Assert is used by mypy and pytest
  "D",       # Too many doc requests
  "COM812",  # Trailing commas teach the formatter
]
flake8-annotations.allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "INP001", "S603"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "invalid-name",
  "line-too-long",
  "missing-class-docstring",
  "missing-module-docstring",
  "wrong-import-position",
]


[tool.repo-review.ignore]
PY004 = "All docs in README"
